# AxiMate

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  NOTICE  README.md
.cursor/rules/: aximate-product-packaging.mdc
components/: README.md
components/copaw/: README.md
copaw-extensions/: README.md
deploy/: .env.example  README.md  docker-compose.yml
deploy/gateway/: Dockerfile  docker-entrypoint.sh
deploy/native/: install-hiclaw.sh
deploy/orchestrator/: Dockerfile
deploy/scripts/: README.md  bootstrap-server.sh  deploy-remote.ps1  deploy-remote.sh  deploy.config.example.ps1  update-stack.sh
deploy/worker/: Dockerfile
docs/: ARCHITECTURE.md  COMPLIANCE-APACHE2.md  DEV-COPAW.md  DEV-RIPPLE.md  DIRECTORY.md  PRODUCT-PACKAGING.md
gateway/: README.md
integrations/: README.md
integrations/confluence/: README.md
integrations/hiclaw/: README.md
integrations/ripple/: README.md
integrations/ripple/copaw/: .gitignore
integrations/ripple/copaw/console/: index.html  package.json  vite.config.ts
integrations/ripple/copaw/scripts/: wheel_build.ps1
integrations/ripple/desktop-windows/: Build-RippleWindows.cmd  Build-RippleWindows.ps1  README.md  ROADMAP.md  ripple_desktop.nsi
integrations/ripple/extensions/: README.md
integrations/spring/: README.md
orchestrator/: README.md  pyproject.toml
orchestrator/src/aximate_orchestrator/: __init__.py  cli.py  config.py
orchestrator/tests/: test_cli.py
worker/: README.md  pyproject.toml
worker/src/aximate_worker/: __init__.py  __main__.py  config.py  http_app.py  server.py
(+54 files in other folders)
